feat: add api documentation for auth(login, register, profile)
